// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`отчет: status === ERROR: вернет флаг для удаления данных 1`] = `
Object {
  "field": "price_stats_graph",
  "status": "REMOVE",
}
`;

exports[`отчет: status === OK: если есть значение, вернет правильный результат 1`] = `
Object {
  "key": "Оценка стоимости",
  "value": "~ 20 000 ₽",
}
`;

exports[`отчет: status === OK: если нет значения, вернет флаг для удаления данных 1`] = `
Object {
  "field": "price_stats_graph",
  "status": "REMOVE",
}
`;

exports[`отчет: status === undefined: вернет правильный результат 1`] = `
Object {
  "key": "Оценка стоимости",
  "value": "",
}
`;
